homework01: finins(repeat)
Author: Alexei <a_subscriber@mail.ru>
Date:   Sun Feb 7 16:21:15 2021 +0200

    c

commit a1734af601ad90baefb2fef0077489b8cb01a233
Author: Alexei <a_subscriber@mail.ru>
Date:   Sun Feb 7 15:32:09 2021 +0200

    c

--- a/src/main/resources/homework13/homework13_statistic.org
+++ b/src/main/resources/homework13/homework13_statistic.org
@@ -6,7 +6,7 @@ Test: https://forms.gle/icyxFKPeSb4Do5s68
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
 |---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 04.01.2021 17:20 | 04.01.2021 17:40 |                         1.5 | 9/13            |      69 | Success |
+| 1 | 04.01.2021 17:20 | 04.01.2021 17:40 |                         1.5 | 9/13            |      69 | Pass    |
 
 
 
