--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -9,10 +9,11 @@
 
 
 Test#1
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 22.11.2020 20:20 | 22.11.2020 20:30 |                           2 | 2/5             |      45 | Fail    |
-| 2 | 29.11.2020 13:50 | 29.11.2020 14:00 |                           2 | 4/5             |      80 | Success |
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 22.11.2020 20:20 | 22.11.2020 20:30 |                           2 | 2/5             |      45 | Fail   |
+| 2 | 29.11.2020 13:50 | 29.11.2020 14:00 |                           2 | 4/5             |      80 | Pass   |
+| 3 | 07.02.2021 19:50 | 07.02.2020 20:00 |                           2 | 5/5             |     100 | Pass   |
 
 
 
