--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -20,7 +20,8 @@ Test#1
 Test#2 (Module 1)
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 1 | 29.11.2020 23:10 | 29.11.2020 00:10 |                         1.2 | 38/50           |      76 | Success|
+| 1 | 29.11.2020 23:10 | 29.11.2020 00:10 |                         1.2 | 38/50           |      76 | Pass   |
+| 2 | 07.02.2021 20:45 | 07.02.2021 21:20 |                         0.7 | 42/50           |      84 | Pass   |
 
 
 
