--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -9,17 +9,20 @@
  
 
 Test#1
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 06.12.2020 23:00 | 06.12.2020 23:15 |                         1.5 | 10/13           |      76 | Success |
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 06.12.2020 23:00 | 06.12.2020 23:15 |                         1.5 | 10/13           |      76 | Pass   |
+| 2 | 08.02.2021 12:10 | 08.02.2021 12:27 |                         1.3 | 8/13            |      61 | Fail   |
+| 3 | 08.02.2021 15:05 | 08.02.2021 15:16 |                         1.2 | 11/13           |      84 | Pass   |
 
 
 
 
-Test#2 
-| # | Start date | End date | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------+----------+-----------------------------+-----------------+---------+---------|
-| 1 |            |          |                             |                 |         |         |
+
+Test#2 (Модуль 2. Working with Java Data Types)
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 08.02.2021 15:25 | 08.02.2021 16:00 |                         0.7 | 41/50           |      82 | Pass   |
 
 
 
