--- a/src/main/resources/homework09/homework09_statistic.org
+++ b/src/main/resources/homework09/homework09_statistic.org
@@ -4,17 +4,14 @@ Test:  https://forms.gle/GzfBAj5FmsbM3Gdx5
 
 Мин. кол-во % для прохождения теста: 65%
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 26.12.2020 16:15 | 26.12.2020 16:31 |                         1.5 | 7/12            |     55% | Fail    |
-| 2 | 26.12.2020 21:55 | 26.12.2020 22:15 |                         1.5 | 6/12            |     50% | Fail    |
-| 3 | 27.12.2020 14:50 | 26.12.2020 15:05 |                         1.3 | 12/12           |    100% | Success |
-
-
-
-
-
-
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 26.12.2020 16:15 | 26.12.2020 16:31 |                         1.5 | 7/12            |      55 | Fail   |
+| 2 | 26.12.2020 21:55 | 26.12.2020 22:15 |                         1.5 | 6/12            |      50 | Fail   |
+| 3 | 27.12.2020 14:50 | 26.12.2020 15:05 |                         1.3 | 12/12           |     100 | Pass   |
+| 4 | 09.02.2021 11:42 | 09.02.2021 12:02 |                         1.6 | 5/12            |      45 | Fail   |
+| 5 | 09.02.2021 13:42 | 09.02.2021 13:55 |                         1.1 | 6/12            |      50 | Fail   |
+| 6 | 09.02.2021 21:30 | 09.02.2021 21:38 |                         0.8 | 12/12           |     100 | Pass   |
 
 
 
