--- a/src/main/resources/homework11/homework11_statistic.org
+++ b/src/main/resources/homework11/homework11_statistic.org
@@ -4,9 +4,11 @@ Test:  https://forms.gle/pJW24cFWQyFoqCmKA
 
 Мин. кол-во % для прохождения теста: 65%
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 01.01.2021 19:30 | 01.01.2021 20:20 |                           2 | 17/26           |     65% | Success |
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 01.01.2021 19:30 | 01.01.2021 20:20 |                           2 | 17/26           |      65 | Pass   |
+| 2 | 12.02.2021 16:30 | 12.02.2021 19:10 |                         1.5 | 14/26           |      60 | Fail   |
+|   |                  |                  |                             |                 |         |        |
 
 
 
