--- a/src/main/resources/homework11/homework11_statistic.org
+++ b/src/main/resources/homework11/homework11_statistic.org
@@ -8,7 +8,7 @@ Test:  https://forms.gle/pJW24cFWQyFoqCmKA
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 01.01.2021 19:30 | 01.01.2021 20:20 |                           2 | 17/26           |      65 | Pass   |
 | 2 | 12.02.2021 16:30 | 12.02.2021 19:10 |                         1.5 | 14/26           |      60 | Fail   |
-|   |                  |                  |                             |                 |         |        |
+| 3 | 13.02.2021 17:45 | 13.02.2021 18:25 |                         1.5 | 16/26           |      62 | Fail   |
 
 
 
