homework14: finish repeat
Author: Alexei <a_subscriber@mail.ru>
Date:   Mon Feb 15 23:02:56 2021 +0200

    c

commit cb1771a96a925f005707904cefbe7f960830d482
Author: Alexei <a_subscriber@mail.ru>
Date:   Mon Feb 15 21:18:42 2021 +0200

    c

--- a/src/main/resources/homework14/homework14_statistic.org
+++ b/src/main/resources/homework14/homework14_statistic.org
@@ -4,10 +4,12 @@ Test: https://forms.gle/3HPH79NHTjodySJk6
 
 Мин. кол-во % для прохождения теста: 65%
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 08.01.2021 13:00 | 08.01.2021 13:40 |                         1.6 | 14/24           |      58 | Fail    |
-| 2 | 09.01.2021 13:00 | 09.01.2021 13:20 |                         0.8 | 19/24           |      79 | Success |
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 08.01.2021 13:00 | 08.01.2021 13:40 |                         1.6 | 14/24           |      58 | Fail   |
+| 2 | 09.01.2021 13:00 | 09.01.2021 13:20 |                         0.8 | 19/24           |      79 | Pass   |
+| 3 | 15.02.2021 19:55 | 15.02.2021 20:30 |                         1.2 | 16/24           |      65 | Pass   |
+| 4 | 15.02.2021 22:40 | 15.02.2021 22:20 |                         1.5 | 19/24           |      79 | Pass   |
 
 
 
