--- a/src/main/resources/homework26/homework26_statistic.org
+++ b/src/main/resources/homework26/homework26_statistic.org
@@ -7,5 +7,6 @@ Test: https://forms.gle/4nwS6Lj3DH7qcZoR9
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 14.02.2021 14:00 | 14.02.2021 14:50 |                        2.00 | 14/25           |      56 | Fail   |
+| 2 | 16.02.2021 17:05 | 16.02.2021 16:55 |                          4. | 20/25           |      80 | Pass   |
 
 
