homework15: finish repeat
Author: Alexei <a_subscriber@mail.ru>
Date:   Wed Feb 17 13:10:30 2021 +0200

    c

commit 47d2c815bf9c666951fe3fe98df1cca9842e96ea
Author: Alexei <a_subscriber@mail.ru>
Date:   Wed Feb 17 12:31:22 2021 +0200

    c

commit 47517876037287e73b5813bf61dfb55928de90d8
Author: Alexei <a_subscriber@mail.ru>
Date:   Wed Feb 17 12:01:13 2021 +0200

    c

commit ebea25790a96626b4e0dbda62ba219123f9c2b0b
Author: Alexei <a_subscriber@mail.ru>
Date:   Wed Feb 17 11:51:42 2021 +0200

    c

commit c88c8ae7e588117d608fbd7e24729401d2c96fad
Author: Alexei <a_subscriber@mail.ru>
Date:   Wed Feb 17 11:49:23 2021 +0200

    c

--- a/src/main/resources/homework15/homework15_statistic.org
+++ b/src/main/resources/homework15/homework15_statistic.org
@@ -7,6 +7,8 @@ Test: https://forms.gle/JE1W6vXQPKtzr37WA
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 09.01.2021 18:55 | 09.01.2021 19:18 |                        1.53 | 10/15           |      66 | Pass   |
+| 2 | 16.02.2021 22:15 | 16.02.2021 22:40 |                         2.3 | 11/15           |      73 | Pass   |
+| 3 | 17.02.2021 12:33 | 17.02.2021 13:03 |                         2.0 | 14/15           |      93 | Pass   |
 
 
 
