--- a/src/main/resources/homework16/homework16_statistic.org
+++ b/src/main/resources/homework16/homework16_statistic.org
@@ -7,6 +7,7 @@ Test: https://forms.gle/i3SynCxb1cs5JYBC6
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 10.01.2021 13:20 | 10.01.2021 14:20 |                         1.2 | 41/50           |      82 | Pass   |
+| 2 | 17.02.2021 16:00 | 17.02.2021 17:00 |                         1.2 | 43/50           |      86 | Pass   |
 
 
 
