--- a/src/main/resources/homework17/homework17_statistic.org
+++ b/src/main/resources/homework17/homework17_statistic.org
@@ -7,6 +7,7 @@ Test: https://forms.gle/zr95NKq4SRmZCWiy5
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 16.01.2021 11:20 | 16.01.2021 12:00 |                         1.6 | 19/25           |      76 | Pass   |
+| 2 | 18.02.2021 16:45 | 18.02.2021 17:10 |                         1.0 | 21/25           |      84 | Pass   |
 
 
 
