--- a/src/main/resources/homework16/homework16_statistic.org
+++ b/src/main/resources/homework16/homework16_statistic.org
@@ -3,6 +3,7 @@
 Test: https://forms.gle/i3SynCxb1cs5JYBC6
 
 Мин. кол-во % для прохождения теста: 65%
+Average time response: <= 2 minutes
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
