--- a/src/main/resources/homework24/homework24_statistic.org
+++ b/src/main/resources/homework24/homework24_statistic.org
@@ -4,6 +4,7 @@
 Test:  https://forms.gle/4G2WFLjmbUqqcGc6A
 
 Мин. кол-во % для прохождения теста: 65%
+Average time response: <= 2 minutes
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
