--- a/src/main/resources/homework25/homework25_statistic.org
+++ b/src/main/resources/homework25/homework25_statistic.org
@@ -3,6 +3,7 @@
 Test: https://forms.gle/Y9JH3ecrkZs5NLGSA
 
 Мин. кол-во % для прохождения теста: 65%
+Average time response: <= 2 minutes
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
