homework27: try first
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 22:04:42 2021 +0200

    c

commit 3e537b6bdfcb26855cc3e21e5d154211a95475e3
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 21:05:56 2021 +0200

    c

commit 724777976270e0591415912e347b09a34fa6478f
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 21:01:28 2021 +0200

    c

commit 1704ebadd262ca7f073554c5e71c2375beb95119
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 20:57:51 2021 +0200

    c

commit dcf90d39066990e4b38a4e79704fe0fb90d7a151
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 18:33:28 2021 +0200

    c

commit 578ee143a149be64d68eb49d2d347f724e3be1da
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 17:00:28 2021 +0200

    c

commit b0bf4d3e9e754124b8733dcd39eadb24ffc91d5e
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 16:28:16 2021 +0200

    c

commit 967820a1a1b56875600477d8c2519f98abe35a61
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 16:11:50 2021 +0200

    c

commit 1706d772bb6f858be088a212361e8a773bf78495
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 14:57:31 2021 +0200

    c

commit 3e9b6de73a88df2774c81b43ea2fd06bcf5560d6
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 14:44:40 2021 +0200

    c

commit 54133653fae644c416f16e8df5db38f558546c50
Author: Alexei <a_subscriber@mail.ru>
Date:   Sat Feb 20 14:43:42 2021 +0200

    c

--- a/src/main/resources/homework27/homework27_statistic.org
+++ b/src/main/resources/homework27/homework27_statistic.org
@@ -3,17 +3,18 @@
 Test#1: https://forms.gle/Ye5pEo81uiT4dTHs9
 
 Мин. кол-во % для прохождения теста: 65%
-Average time response: <= 2 minutes
+Максимальное время ответа на один вопрос: 2 мин. 
 
-| # | Start date | End date | Average time response (min) | Correct answers | Percent | Result |
-|---+------------+----------+-----------------------------+-----------------+---------+--------|
-| 1 |            |          |                             |                 |         |        |
-
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 20.02.2021 12:05 | 20.02.2021 13:25 |                        2.42 | 19/33           |      57 | Fail   |
+|   |                  |                  |                             |                 |         |        |
 
 
 
 Test#2: https://forms.gle/DPNTFBw64BSPrHj8A
+Весь модуль 
 
-| # | Start date | End date | Average time response (min) | Correct answers | Percent | Result |
-|---+------------+----------+-----------------------------+-----------------+---------+--------|
-| 1 |            |          |                             |                 |         |        |
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 20.02.2021 18:40 | 20.02.2021 20:00 |                         1.6 | 34/50           |      68 | Pass   |
