--- a/src/main/resources/homework18/homework18_statistic.org
+++ b/src/main/resources/homework18/homework18_statistic.org
@@ -3,7 +3,7 @@
 Test:  https://forms.gle/LcGXgEJSu9txTDFr8
 
 Мин. кол-во % для прохождения теста: 65%
-Average time response: <= 2 minutes
+Максимальное время ответа на один вопрос: 2 мин. 
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
 |---+------------------+------------------+-----------------------------+-----------------+---------+---------|
