--- a/src/main/resources/homework27/homework27_statistic.org
+++ b/src/main/resources/homework27/homework27_statistic.org
@@ -10,6 +10,7 @@ Test#1: https://forms.gle/Ye5pEo81uiT4dTHs9
 | 1 | 20.02.2021 12:05 | 20.02.2021 13:25 |                        2.42 | 19/33           |      57 | Fail   |
 | 2 | 21.02.2021 12:30 | 20.02.2021 13:25 |                         1.6 | 25/33           |      75 | Pass   |
 | 3 | 21.02.2021 16:45 | 20.02.2021 17:15 |                         0.9 | 31/33           |      93 | Pass   |
+| 4 | 22.02.2021 21:55 | 20.02.2021 22:15 |                        1.65 | 30/33           |      90 | Pass   |
 
 
 
@@ -20,5 +21,3 @@ Test#2: https://forms.gle/DPNTFBw64BSPrHj8A
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 20.02.2021 18:40 | 20.02.2021 20:00 |                         1.6 | 34/50           |      68 | Pass   |
 | 2 | 21.02.2021 14:30 | 21.02.2021 15:15 |                         0.9 | 44/50           |      88 | Pass   |
-
-https://docs.google.com/forms/d/e/1FAIpQLSe8wFNFTFb_AFHYdPeH1ka0mTALagwT0lLf_kVQzM7zaVXE7A/viewscore?viewscore=AE0zAgArKfeg0g-4sYL6KKq5TbJQ3ajGSfP6RDhWB4_xq9Sdyigh5hiDPniKCtwBCfDsLAk
