--- a/src/main/resources/homework21/homework21_statistic.org
+++ b/src/main/resources/homework21/homework21_statistic.org
@@ -5,11 +5,12 @@ Test: https://forms.gle/rbixkcrYC7hY8LZP6
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 25.01.2021 21:30 | 25.01.2021 22:00 |                         1.5 | 10/20           |      50 | Fail    |
-| 2 | 27.01.2021 20:00 | 25.01.2021 22:30 |                         1.5 | 12/20           |      52 | Fail    |
-| 3 | 28.01.2021 21:10 | 25.01.2021 21:30 |                         1.0 | 14/20           |      70 | Success |
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 25.01.2021 21:30 | 25.01.2021 22:00 |                         1.5 | 10/20           |      50 | Fail   |
+| 2 | 27.01.2021 20:00 | 25.01.2021 22:30 |                         1.5 | 12/20           |      52 | Fail   |
+| 3 | 28.01.2021 21:10 | 25.01.2021 21:30 |                         1.0 | 14/20           |      70 | Pass   |
+| 4 | 24.02.2021 19:20 | 24.02.2021 19:35 |                         0.9 | 15/20           |      75 | Pass   |
 
 
 
