--- a/src/main/resources/homework22/homework22_statistic.org
+++ b/src/main/resources/homework22/homework22_statistic.org
@@ -5,10 +5,11 @@ Test: https://forms.gle/kcPGsfDdLArPsZJNA
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
-| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result  |
-|---+------------------+------------------+-----------------------------+-----------------+---------+---------|
-| 1 | 31.01.2021 18:30 | 31.01.2021 18:50 |                        0.65 | 6/13            |      45 | Fail    |
-| 2 | 02.02.2021 19:45 | 02.02.2021 20:06 |                        1.61 | 12/13           |      92 | Success |
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 31.01.2021 18:30 | 31.01.2021 18:50 |                        0.65 | 6/13            |      45 | Fail   |
+| 2 | 02.02.2021 19:45 | 02.02.2021 20:06 |                        1.61 | 12/13           |      92 | Pass   |
+| 3 | 24.02.2021 15:30 | 24.02.2021 15:50 |                         1.5 | 10/13           |      80 | Pass   |
 
 
 
