--- a/src/main/resources/homework24/homework24_statistic.org
+++ b/src/main/resources/homework24/homework24_statistic.org
@@ -10,3 +10,4 @@ Test:  https://forms.gle/4G2WFLjmbUqqcGc6A
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 05.02.2021 16:30 | 05.02.2021 17:40 |                        1.53 | 28/39           |      71 | Pass   |
 | 2 | 06.02.2021 13:00 | 06.02.2021 13:40 |                        1.00 | 36/39           |      92 | Pass   |
+| 3 | 22.02.2021 23:00 | 22.02.2021 23:50 |                         1.3 | 32/39           |      82 | Pass   |
