--- a/src/main/resources/homework19/homework19_statistic.org
+++ b/src/main/resources/homework19/homework19_statistic.org
@@ -8,6 +8,7 @@ Test#1:  https://forms.gle/BqzYUxDfmebZbJEt9
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 20.01.2021 19:20 | 20.01.2021 19:52 |                         1.8 | 17/23           |      72 | Pass   |
+| 2 | 25.02.2021 16:40 | 25.02.2021 17:15 |                         1.6 | 19/23           |      82 | Pass   |
 
 
 
@@ -18,4 +19,5 @@ Test#2:  https://forms.gle/TDuNduMSqShSTfsk9
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 23.01.2021 15:30 | 23.01.2021 16:15 |                         0.9 | 35/50           |      70 | Pass   |
 | 2 | 24.01.2021 11:25 | 24.01.2021 11:52 |                        0.54 | 47/50           |      94 | Pass   |
+| 3 | 25.02.2021 21:25 | 25.02.2021 22:15 |                         1.0 | 41/50           |      82 | Pass   |
 
