--- a/src/main/resources/homework20/homework20_statistic.org
+++ b/src/main/resources/homework20/homework20_statistic.org
@@ -9,5 +9,7 @@ Test: https://forms.gle/fETET5hNPKTVL7cZ7
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 24.01.2021 12:40 | 24.01.2021 13:15 |                        0.65 | 10/23           |      45 | Fail   |
 | 2 | 24.01.2021 22:15 | 24.01.2021 22:35 |                        0.86 | 20/23           |      86 | Pass   |
+| 3 | 24.02.2021 22:10 | 24.02.2021 22:45 |                         1.6 | 12/23           |      55 | Fail   |
+| 4 | 25.02.2021 15:00 | 25.02.2021 15:35 |                         1.3 | 19/23           |      82 | Pass   |
 
 
