--- a/src/main/resources/homework28/homework28_statistic.org
+++ b/src/main/resources/homework28/homework28_statistic.org
@@ -8,4 +8,5 @@ Test#: https://forms.gle/hujtjZbW8SxVVLfHA
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 28.02.2021 11:10 | 28.02.2021 12:30 |                         2.1 | 27/38           |      71 | Pass   |
+| 2 | 01.03.2021 15:00 | 01.03.2021 15:40 |                         1.2 | 37/38           |      97 | Pass   |
 
