--- a/src/main/resources/homework17/homework17_statistic.org
+++ b/src/main/resources/homework17/homework17_statistic.org
@@ -9,6 +9,7 @@ Test: https://forms.gle/zr95NKq4SRmZCWiy5
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 16.01.2021 11:20 | 16.01.2021 12:00 |                         1.6 | 19/25           |      76 | Pass   |
 | 2 | 18.02.2021 16:45 | 18.02.2021 17:10 |                         1.0 | 21/25           |      84 | Pass   |
+| 3 | 04.03.2021 21:10 | 04.03.2021 21:40 |                         1.2 | 20/25           |      80 | Pass   |
 
 
 
