--- a/src/main/resources/homework30/homework30_statistic.org
+++ b/src/main/resources/homework30/homework30_statistic.org
@@ -1,10 +1,12 @@
-ДЗ#30: Необходимость в приведении типов. Пространства имён
+ДЗ#30: Противопоставление контролируемых исключений неконтролируемым, в т.ч. ошибкам. 
+       Работа с типичными классами исключений. Преимущества обработки исключений.
 
-Test#1:
+Test: https://forms.gle/MwUpZEqTWg3dmek56
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
-| 2 | 11.03.2021 17:40 | 11.03.2021 15:10 |                             |                 |         |        |
+| 2 | 11.03.2021 17:25 | 11.03.2021 15:55 |                         1.4 | 13/21           |      61 | Fail   |
+|   |                  |                  |                             |                 |         |        |
