--- a/src/main/resources/homework32/homework32_statistic.org
+++ b/src/main/resources/homework32/homework32_statistic.org
@@ -1,10 +1,17 @@
 ДЗ#32: Создание и вызов метода, возбуждающего исключение
 
-Test: https://forms.gle/pgjWTyZU5hosp3KU7
-
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
 
+Teet#1: https://forms.gle/m7wuojmr8CbXTWsJ7
+| # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
+|---+------------------+------------------+-----------------------------+-----------------+---------+--------|
+| 1 | 21.03.2021 09:50 | 21.03.2021 10:06 |                         1.5 | 5/10            |      50 | Fail   |
+| 2 | 21.03.2021 13:15 | 21.03.2021 13:25 |                         1.0 | 7/10            |      70 | Pass   |
+| 3 | 21.03.2021 13:25 | 21.03.2021 13:30 |                         0.5 | 9/10            |      90 | Pass   |
+
+
+Test#2: https://forms.gle/pgjWTyZU5hosp3KU7
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 20.03.2021 16:00 | 20.03.2021 16:45 |                         0.9 | 39/50           |      78 | Pass   |
