--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -23,7 +23,7 @@ Test#2 (Модуль 2. Working with Java Data Types)
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 08.02.2021 15:25 | 08.02.2021 16:00 |                         0.7 | 41/50           |      82 | Pass   |
-| 2 | 11.04.2021 12:00 |                  |                             |                 |         |        |
+| 2 | 17.04.2021 11:25 | 17.04.2021 13:00 |                         1.5 | 44/50           |      88 | Pass   |
 
 
 
