--- a/src/main/resources/homework12/homework12_statistic.org
+++ b/src/main/resources/homework12/homework12_statistic.org
@@ -9,7 +9,8 @@ Test: https://forms.gle/UBt2b9iCcYPbkkyB6
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 02.01.2021 20:15 | 02.01.2021 20:31 |                         1.5 | 11/13           |      84 | Pass   |
 | 2 | 14.02.2021 16:10 | 14.02.2021 16:30 |                         1.4 | 11/13           |      84 | Pass   |
-| 3 | 23.04.2021 12:10 | 23.04.2021 16:30 |                             | 8/13            |      61 | Fail   |
+| 3 | 23.04.2021 12:10 | 23.04.2021 16:30 |                         1.5 | 8/13            |      61 | Fail   |
+| 4 | 24.04.2021 12:00 | 24.04.2021 11:20 |                         1.6 | 11/13           |      84 | Pass   |
 
 
 
