--- a/src/main/resources/homework13/homework13_statistic.org
+++ b/src/main/resources/homework13/homework13_statistic.org
@@ -11,6 +11,7 @@ Test: https://forms.gle/icyxFKPeSb4Do5s68
 | 2 | 14.02.2021 16:40 | 14.02.2021 16:53 |                         1.0 | 9/13            |      69 | Pass   |
 | 3 | 14.02.2021 23:20 | 14.02.2021 23:30 |                         0.8 | 13/13           |     100 | Pass   |
 | 4 | 24.04.2021 14:15 | 24.04.2021 14:30 |                         1.5 | 10/13           |      76 | Pass   |
+| 5 | 25.04.2021 12:15 | 24.04.2021 14:40 |                         1.5 | 10/13           |      76 | Pass   |
 
 
 
