--- a/src/main/resources/homework16/homework16_statistic.org
+++ b/src/main/resources/homework16/homework16_statistic.org
@@ -9,6 +9,7 @@ Test: https://forms.gle/i3SynCxb1cs5JYBC6
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 10.01.2021 13:20 | 10.01.2021 14:20 |                         1.2 | 41/50           |      82 | Pass   |
 | 2 | 17.02.2021 16:00 | 17.02.2021 17:00 |                         1.2 | 43/50           |      86 | Pass   |
+| 3 | 08.05.2021 14:15 | 08.05.2021 15:00 |                         1.5 | 31/50           |         | Fail   |
 
 
 
