--- a/src/main/resources/homework01/homework01_statistic.org
+++ b/src/main/resources/homework01/homework01_statistic.org
@@ -9,3 +9,4 @@ Test url: https://forms.gle/wTzWcCQEgsasWc8v6
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 03.11.2020 21:00 | 03.11.2020 21:30 |                             | 21/29           |      72 | Pass   |
 | 2 | 07.02.2020 15:35 | 07.02.2020 16:15 |                         1.6 | 23/29           |      79 | Pass   |
+| 3 | 14.11.2022       |                  |                             |                 |      83 | Pass   |
