--- a/src/main/resources/homework02/homework02_statistic.org
+++ b/src/main/resources/homework02/homework02_statistic.org
@@ -10,6 +10,8 @@ Test url: https://forms.gle/64ChbhJoLboVKyi26
 | 1 | 06.11..2020 21:00 | 06.11.2020 21:30 |                             | 15/27           |      55 | Fail   |
 | 2 | 13.11.2020 12:00  | 13.11.2020 12:30 |                             | 19/27           |      70 | Pass   |
 | 3 | 07.02.2020 16:40  | 07.02.2020 17:10 |                         1.7 | 15/27           |      55 | Fail   |
+| 4 | 17.11.2022        |                  |                             |                 |      88 | Pass   |
+|   |                   |                  |                             |                 |         |        |
 
 
 
