--- a/src/main/resources/homework03/homework03_statistic.org
+++ b/src/main/resources/homework03/homework03_statistic.org
@@ -10,6 +10,7 @@ Test url: https://forms.gle/tHzxuf3QiUroSCUz5
 | 1 | 17.11.2020 19:40 | 17.11.2020 : 19:55 |                             | 5/11            |      45 | Fail   |
 | 2 | 22.11.2020 16:40 | 22.11.2020 : 19:50 |                             | 11/11           |     100 | Pass   |
 | 3 | 07.02.2021 19:00 | 07.02.2020 : 19:10 |                         0.9 | 11/11           |     100 | Pass   |
+| 4 | 19.11.2022       |                    |                             |                 |      81 | Pass   |
 
 
 
