--- a/src/main/resources/homework04/homework04_statistic.org
+++ b/src/main/resources/homework04/homework04_statistic.org
@@ -1,7 +1,8 @@
 ДЗ#4: Объявление и инициализация переменных (включая приведение примитивных типов данных) 
 
-Test url: https://forms.gle/zgwS9YHVfL3zsXty5
-
+Test: https://docs.google.com/forms/d/e/1FAIpQLScycljT6BOJservmUA13ly2aclZLyNVob2YTMQJmo-vm2npAA/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLScycljT6BOJservmUA13ly2aclZLyNVob2YTMQJmo-vm2npAA/viewscore?viewscore=AE0zAgA8KWO1Qx5KlLVCP9OnmOencnBop8YaZuDjiQrVsbZ9XiVArsOp_YL9dcqr3xYS1UY
+ 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин.  
 
@@ -10,9 +11,7 @@ Test url: https://forms.gle/zgwS9YHVfL3zsXty5
 | 1 | 22.11.2020 18:20 | 22.11.2020 18:55 |                             | 6/14            |      43 | Fail   |
 | 2 | 28.11.2020 14:00 | 28.11.2020 14:20 |                             | 13/14           |      92 | Pass   |
 | 3 | 07.02.2021 19:15 | 07.02.2021 19:30 |                         0.9 | 13/14           |      92 | Pass   |
-
-
-
+| 4 | 21.11.2022       |                  |                             |                 |         |        |
 
 
 
