--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -1,6 +1,9 @@
 ДЗ#5: ДЗ: Определение областей действия переменных 
 
-Тест#1 по теме сегодняшнего занятия: https://forms.gle/Tzc1rz6MqUDktXkt9
+Test: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewscore?viewscore=AE0zAgCXw6ian2VJkaziVceyb0CM5Z2AoMLpWPcdU4AOhTonuD9CGTt-ym7cpyMkT713Shc
+Test2: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewscore?viewscore=AE0zAgCeb6td5aJm4xusLiP-Mu_B9_I1ivKxwtlD6jxmPqBNJRPsct3Fqf3qBiSvRh1HyMA
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин.  
@@ -11,6 +14,8 @@ Test#1
 | 1 | 22.11.2020 20:20 | 22.11.2020 20:30 |                           2 | 2/5             |      45 | Fail   |
 | 2 | 29.11.2020 13:50 | 29.11.2020 14:00 |                           2 | 4/5             |      80 | Pass   |
 | 3 | 07.02.2021 19:50 | 07.02.2020 20:00 |                           2 | 5/5             |     100 | Pass   |
+| 4 | 21.11.2022       |                  |                             |                 |      60 | Fail   |
+|   |                  |                  |                             |                 |         |        |
 
 
 Тест#2 по всему пройденному блоку Java Basics: https://forms.gle/9Wow7RRygXyx5fFU6
