homework 05 pass big tests

--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -2,6 +2,7 @@
 
 Test: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewform
 Answer: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewscore?viewscore=AE0zAgCXw6ian2VJkaziVceyb0CM5Z2AoMLpWPcdU4AOhTonuD9CGTt-ym7cpyMkT713Shc
+
 Test2: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewform
 Answer: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewscore?viewscore=AE0zAgCeb6td5aJm4xusLiP-Mu_B9_I1ivKxwtlD6jxmPqBNJRPsct3Fqf3qBiSvRh1HyMA
 
@@ -15,7 +16,7 @@ Test#1
 | 2 | 29.11.2020 13:50 | 29.11.2020 14:00 |                           2 | 4/5             |      80 | Pass   |
 | 3 | 07.02.2021 19:50 | 07.02.2020 20:00 |                           2 | 5/5             |     100 | Pass   |
 | 4 | 21.11.2022       |                  |                             |                 |      60 | Fail   |
-|   |                  |                  |                             |                 |         |        |
+| 5 | 26.11.2022       |                  |                             |                 |      60 | Fail   |
 
 
 Тест#2 по всему пройденному блоку Java Basics: https://forms.gle/9Wow7RRygXyx5fFU6
@@ -26,6 +27,7 @@ Test#2 (Module 1)
 | 1 | 29.11.2020 23:10 | 29.11.2020 00:10 |                         1.2 | 38/50           |      76 | Pass   |
 | 2 | 07.02.2021 20:45 | 07.02.2021 21:20 |                         0.7 | 42/50           |      84 | Pass   |
 | 3 | 03.04.2021 10:30 | 03.04.2021 12:00 |                         1.8 | 39/50           |      78 | Pass   |
+| 4 | 26.11.2022       |                  |                             | 45/50           |      90 | Pass   |
 
 
 
