--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -1,6 +1,7 @@
 ДЗ#7: Чтение и запись объектных полей. Классы-оболочки 
 
-Тест#1 https://forms.gle/A8HUUp469EsNZuBNA
+Test: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewscore?viewscore=AE0zAgCXw6ian2VJkaziVceyb0CM5Z2AoMLpWPcdU4AOhTonuD9CGTt-ym7cpyMkT713Shc
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
