--- a/src/main/resources/homework06/homework06_statistic.org
+++ b/src/main/resources/homework06/homework06_statistic.org
@@ -8,9 +8,6 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfz64I0Md5MMF9t0yPv3KmqtRtZts_u
 
 | # | Start date | End date | Average time response (min) | Correct answers | Percent | Result |
 |---+------------+----------+-----------------------------+-----------------+---------+--------|
-| 1 | 26.11.2022 |          |                             |                 |         |        |
-
-
-
-
+| 1 | 26.11.2022 |          |                             |                 |      15 | Fall   |
+|   |            |          |                             |                 |         |        |
 
