--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -1,7 +1,7 @@
 ДЗ#7: Чтение и запись объектных полей. Классы-оболочки 
 
-Test: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewform
-Answer: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewscore?viewscore=AE0zAgCXw6ian2VJkaziVceyb0CM5Z2AoMLpWPcdU4AOhTonuD9CGTt-ym7cpyMkT713Shc
+Test: https://docs.google.com/forms/d/e/1FAIpQLSexSMd0qX7VXsi5_sznhnfkKitDJxAPaPEqeT9jgctwg_Pjbw/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSexSMd0qX7VXsi5_sznhnfkKitDJxAPaPEqeT9jgctwg_Pjbw/viewscore?viewscore=AE0zAgC-NiCESYv3IsOTnFhn4hQTjObI62ao-oy53MnaRpZ4WvvLB5-AMHsMoeOnjw2sZiA
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -14,12 +14,15 @@ Test#1
 | 3 | 08.02.2021 15:05 | 08.02.2021 15:16 |                         1.2 | 11/13           |      84 | Pass   |
 | 4 | 03.04.2021 14:05 | 03.04.2021 14:25 |                         1.3 | 9/13            |      69 | Pass   |
 | 5 | 11.04.2021 11:15 | 03.04.2021 14:40 |                         1.8 | 10/13           |      76 | Pass   |
+| 6 | 26.11.2022       |                  |                             |                 |         |        |
 
 
 
 
-Тест#2 https://forms.gle/KzGjKJcAB7xHMDXx9
-Test#2 (Модуль 2. Working with Java Data Types)
+Тест#2 
+
+ Test https://docs.google.com/forms/d/e/1FAIpQLScOiEdXeiI_sJmKXeXStEVSciIOdD3JfJ6DGvjny1ekt4lWgA/viewform
+ Answer: https://docs.google.com/forms/d/e/1FAIpQLScOiEdXeiI_sJmKXeXStEVSciIOdD3JfJ6DGvjny1ekt4lWgA/viewscore?viewscore=AE0zAgB62nJkJkenvDTeTdUbK49nLTNT3FLm_sW6nrfuThZuqt9XKkIW3CCHaTj6oQF0-6g
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
