--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -14,7 +14,7 @@ Test#1
 | 3 | 08.02.2021 15:05 | 08.02.2021 15:16 |                         1.2 | 11/13           |      84 | Pass   |
 | 4 | 03.04.2021 14:05 | 03.04.2021 14:25 |                         1.3 | 9/13            |      69 | Pass   |
 | 5 | 11.04.2021 11:15 | 03.04.2021 14:40 |                         1.8 | 10/13           |      76 | Pass   |
-| 6 | 26.11.2022       |                  |                             |                 |         |        |
+| 6 | 26.11.2022       |                  |                             |                 |      61 | Fail   |
 
 
 
