--- a/src/main/resources/homework05/homework05_statistic.org
+++ b/src/main/resources/homework05/homework05_statistic.org
@@ -3,9 +3,6 @@
 Test: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewform
 Answer: https://docs.google.com/forms/d/e/1FAIpQLSeXA9ZYo25Li4msiVkgwgJGDdejdCrKIsQKELN17iuMB29xBg/viewscore?viewscore=AE0zAgCXw6ian2VJkaziVceyb0CM5Z2AoMLpWPcdU4AOhTonuD9CGTt-ym7cpyMkT713Shc
 
-Test2: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewform
-Answer: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewscore?viewscore=AE0zAgCeb6td5aJm4xusLiP-Mu_B9_I1ivKxwtlD6jxmPqBNJRPsct3Fqf3qBiSvRh1HyMA
-
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин.  
 
@@ -17,10 +14,12 @@ Test#1
 | 3 | 07.02.2021 19:50 | 07.02.2020 20:00 |                           2 | 5/5             |     100 | Pass   |
 | 4 | 21.11.2022       |                  |                             |                 |      60 | Fail   |
 | 5 | 26.11.2022       |                  |                             |                 |      60 | Fail   |
+| 6 | 27.11.2022       |                  |                             |                 |     100 | Pass   |
 
 
-Тест#2 по всему пройденному блоку Java Basics: https://forms.gle/9Wow7RRygXyx5fFU6
-Test#2 (Module 1)
+
+Test2: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLScogFnhliEPCJHb2yJ7UL7mOSKeo-Ti5hdjbLd072SGDKTYWQ/viewscore?viewscore=AE0zAgCeb6td5aJm4xusLiP-Mu_B9_I1ivKxwtlD6jxmPqBNJRPsct3Fqf3qBiSvRh1HyMA
 
 | # | Start date       | End date         | Average time response (min) | Correct answers | Percent | Result |
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
