--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -27,7 +27,7 @@ Test#1
 |---+------------------+------------------+-----------------------------+-----------------+---------+--------|
 | 1 | 08.02.2021 15:25 | 08.02.2021 16:00 |                         0.7 | 41/50           |      82 | Pass   |
 | 2 | 17.04.2021 11:25 | 17.04.2021 13:00 |                         1.5 | 44/50           |      88 | Pass   |
-| 3 | 27.11.2022       |                  |                             |                 |         |        |
+| 3 | 27.11.2022       |                  |                             |                 |      86 | Pass   |
 
 
 
