--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -15,6 +15,7 @@ Test#1
 | 4 | 03.04.2021 14:05 | 03.04.2021 14:25 |                         1.3 | 9/13            |      69 | Pass   |
 | 5 | 11.04.2021 11:15 | 03.04.2021 14:40 |                         1.8 | 10/13           |      76 | Pass   |
 | 6 | 26.11.2022       |                  |                             |                 |      61 | Fail   |
+| 7 | 04.12.2022       |                  |                             | 11/13           |      84 | Pass   |
 
 
 
@@ -28,6 +29,7 @@ Test#1
 | 1 | 08.02.2021 15:25 | 08.02.2021 16:00 |                         0.7 | 41/50           |      82 | Pass   |
 | 2 | 17.04.2021 11:25 | 17.04.2021 13:00 |                         1.5 | 44/50           |      88 | Pass   |
 | 3 | 27.11.2022       |                  |                             |                 |      86 | Pass   |
+| 4 | 04.12.2022       |                  |                             | 50/50           |     100 | Pass   |
 
 
 
