--- a/src/main/resources/homework08/homework08_statistic.org
+++ b/src/main/resources/homework08/homework08_statistic.org
@@ -1,6 +1,8 @@
 ДЗ#8: Применение операторов, включая переопределение приоритета. Унарные операторы  
 
-Test:  https://forms.gle/NnhFSiDGJBbMgicj9
+Test: https://docs.google.com/forms/d/e/1FAIpQLSerrz1yejTy0UCCOrHPzbGU0YKQ3ZZuj5Md0rWGXJg2PQvHDw/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSerrz1yejTy0UCCOrHPzbGU0YKQ3ZZuj5Md0rWGXJg2PQvHDw/viewscore?viewscore=AE0zAgBlbbYhtef5KWofXdJfBy32gI6ZiiencsmMtibvhf4TB-4UFIASbhJqlq09xJzYXmg
+
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -12,6 +14,7 @@ Test:  https://forms.gle/NnhFSiDGJBbMgicj9
 | 3 | 09.02.2021 11:00 | 09.02.2021 11:14 |                         1.4 | 10/10           |     100 | Pass   |
 | 4 | 04.04.2021 20:20 | 04.04.2021 20:30 |                         1.0 | 6/10            |      60 | Fail   |
 | 5 | 11.04.2021 10:30 | 04.04.2021 10:46 |                         1.6 | 6/10            |      60 | Fail   |
+| 6 | 04.12.2022       |                  |                             | 8/10            |      80 | Pass   |
 
 
 
