--- a/src/main/resources/homework10/homework10_statistic.org
+++ b/src/main/resources/homework10/homework10_statistic.org
@@ -1,6 +1,7 @@
 ДЗ#10: Конкатенация. Операторы (не-)равенства и сравнения  
 
-Test:  https://forms.gle/Mt81k2PVNAJDF6vX6
+Test:  https://docs.google.com/forms/d/e/1FAIpQLSdA1sG2c7MYsEuD9mbpy6voaMfcbJuwVP48Gt6Wa_zP_jgyVg/viewform
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSdA1sG2c7MYsEuD9mbpy6voaMfcbJuwVP48Gt6Wa_zP_jgyVg/viewscore?viewscore=AE0zAgBFoW32biihGrf6Tn_LtL-KBUGavXuPqVv1_2iFsLhlnfrbV-lnk94E-roUsh3EykY
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -10,7 +11,7 @@ Test:  https://forms.gle/Mt81k2PVNAJDF6vX6
 | 1 | 27.12.2020 19:35 | 27.12.2020 20:55 |                         1.6 | 35/50           |      70 | Pass   |
 | 2 | 10.02.2021 20:20 | 10.02.2021 21:30 |                         1.4 | 37/50           |      74 | Pass   |
 | 3 | 12.02.2021 13:50 | 12.02.2021 14:30 |                         0.8 | 44/50           |      88 | Pass   |
-| 4 | 17.04.2021 11:00 |                  |                             |                 |         |        |
+| 4 | 18.12.2022       |                  |                             | 38/50           |      76 | Pass   |
 
 
 
