hw01 update tests

--- a/src/main/resources/homework01/homework01_statistic.org
+++ b/src/main/resources/homework01/homework01_statistic.org
@@ -11,3 +11,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScJIB21Dp37XxsHVMuiebsrkphEHG6K
 | 1 | 03.11.2020 21:00 | 03.11.2020 21:30 |                             | 21/29           |      72 | Pass   |
 | 2 | 07.02.2020 15:35 | 07.02.2020 16:15 |                         1.6 | 23/29           |      79 | Pass   |
 | 3 | 14.11.2022       |                  |                             |                 |      83 | Pass   |
+| 4 | 25.11.2022       |                  |                             |                 |      82 | Pass   |
