--- a/src/main/resources/homework13/homework13_statistic.org
+++ b/src/main/resources/homework13/homework13_statistic.org
@@ -13,7 +13,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfBmrimmHTrCOVwo38EjUaMd468itDk
 | 3 | 14.02.2021 23:20 | 14.02.2021 23:30 |                         0.8 | 13/13           |     100 | Pass   |
 | 4 | 24.04.2021 14:15 | 24.04.2021 14:30 |                         1.5 | 10/13           |      76 | Pass   |
 | 5 | 25.04.2021 12:15 | 24.04.2021 14:40 |                         1.5 | 10/13           |      76 | Pass   |
-| 6 | 26.04.2021 12:15 |                  |                             |                 |      69 | Pass   |
+| 6 | 08.01.2023       |                  |                             |                 |      69 | Pass   |
 
 
 
