--- a/src/main/resources/homework16/homework16_statistic.org
+++ b/src/main/resources/homework16/homework16_statistic.org
@@ -11,7 +11,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLScEPFO1ChJwOGI9ZBXYb7wl-_wu9tfo
 | 1 | 10.01.2021 13:20 | 10.01.2021 14:20 |                         1.2 | 41/50           |      82 | Pass   |
 | 2 | 17.02.2021 16:00 | 17.02.2021 17:00 |                         1.2 | 43/50           |      86 | Pass   |
 | 3 | 08.05.2021 14:15 | 08.05.2021 15:00 |                         1.5 | 31/50           |         | Fail   |
-| 4 | 15.01.2023       |                  |                             |                 |         |        |
+| 4 | 15.01.2023       |                  |                             |                 |      84 | Pass   |
 
 
 
